[project]
tags = ["aleph.im", "saas", "marketplace", "cryptocurrency", "fastapi"]

[tool.poetry]
name = "service-markets"
version = "0.3.9"
description = "Software-as-a-Service (SaaS) Marketplace with cryptocurrency payments"
authors = ["Mike Hukiewitz <mike.hukiewitz@robotter.ai>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "service_markets", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
PyNaCl = "^1.5.0"
base58 = "^2.1.1"
semver = "^3.0.0"
pydantic = "^1.10.8"
fastapi = "^0.95.1"
aleph-sdk-python = "^0.6.0"
aiohttp = "^3.8.4"
aars = "^0.7.2"
python-multipart = "^0.0.6"
fastapi-walletauth = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
black = "^23.3.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
